--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--MEU JS-->
     <script src="script.js"></script>
     
-    <img class="profile-picture" src="img/6390a14e5dc3c234baac0b1b67af7d79.png" alt=" Profile Picture :)" >
+    <img class="profile-picture" src="" alt=" Profile Picture :)" >
  
 
     <!-- Links-->
