--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Bruno C.Gomes">
     <!--CSS-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/brand.css">
 
     <!--JS-->
@@ -24,7 +24,7 @@
     <!--MEU JS-->
     <script src="script.js"></script>
     
-    <img class="profile-picture" src="" alt=" Profile Picture :)" >
+    <img class="profile-picture" src="6390a14e5dc3c234baac0b1b67af7d79.png" alt=" Profile Picture :)" >
  
 
     <!-- Links-->
